--- a/web4test/src/main/webapp/pro/Edit.html
+++ b/web4test/src/main/webapp/pro/Edit.html
@@ -379,145 +379,145 @@
 					</div>
 
 
-					<!-- text -->
-					<div class="text-list">
-						<div class="toolbar-option toolbar-radio"
-							data-option-type="text-align" data-number-of-items="4">
-							<h4 class="toolbar-option-label">Text Alignment</h4>
-							<div class="toolbar-radio-inner">
-								<div class="toolbar-radio-item" data-value="left">
-									<i class="fa fa-align-left"></i>
-								</div>
-								<div class="toolbar-radio-item" data-value="center">
-									<i class="fa fa-align-center"></i>
-								</div>
-								<div class="toolbar-radio-item" data-value="right">
-									<i class="fa fa-align-right"></i>
-								</div>
-								<div class="toolbar-radio-item" data-value="justify">
-									<i class="fa fa-align-justify"></i>
-								</div>
-							</div>
-						</div>
-						<div class="toolbar-option toolbar-stepper"
-							data-option-type="text-size">
-							<h4 class="toolbar-option-label">Text Scale</h4>
-							<div class="stepper">
-								<input class="font size-box" type=number value=20>
-							</div>
-						</div>
-						<div class="toolbar-option toolbar-divider"
-							data-option-type="divider"></div>
-						<div class="toolbar-option toolbar-color"
-							data-option-type="text-color">
-							<h4 class="toolbar-option-label">Text Color</h4>
-							<div class="toolbar-color-trigger">
-								<input class="text-colorinput" type="color">
-								<div class="toolbar-color-reset icon i-undo"
-									data-tooltip="Use default color" data-tooltip-delay="500"></div>
-							</div>
-						</div>
-						<div class="toolbar-option toolbar-color"
-							data-option-type="background-color">
-							<h4 class="toolbar-option-label">Background Color</h4>
-							<div class="toolbar-color-trigger transparent">
-								<input class="back-colorinput" type="color">
-								<div class="toolbar-color-reset icon i-undo"
-									data-tooltip="Use default color" data-tooltip-delay="500"></div>
-							</div>
-						</div>
-						<div class="toolbar-option toolbar-range"
-							data-option-type="opacity">
-							<h4 class="toolbar-option-label">Opacity</h4>
-							<div class="range">
-								<input class="opacity size-box" type=number value=1> <input
-									class="opacity size-scroll" type=range min="0" max="1"
-									step="0.1">
-							</div>
-						</div>
-						<div id="padding" class="toolbar-option toolbar-stepper"
-							data-option-type="padding">
-							<h4 class="toolbar-option-label">Padding</h4>
-							<div class="stepper">
-								<input class="padding size-box" type=number>
-							</div>
-						</div>
-						<div class="toolbar-option toolbar-divider"
-							data-option-type="divider"></div>
-						<div class="toolbar-option toolbar-group"
-							data-group-type="border-css">
-							<div class="text-toolbar-group-trigger">
-								<span class="label">Border</span> <input type="checkbox"
-									class="border checkbox" name="border" value="border">
-							</div>
-							<div class="text-toolbar-group-options">
-								<div class="text-toolbar-group-options-inner">
-									<div class="toolbar-option toolbar-select"
-										data-option-type="border-style">
-										<h4 class="toolbar-option-label">Style</h4>
-										<div class="text-toolbar-select-trigger">Solid</div>
-									</div>
-									<div class="toolbar-option toolbar-stepper"
-										data-option-type="border-width">
-										<h4 class="toolbar-option-label">Width</h4>
-										<div class="stepper">
-											<input class="lineWidth size-box" type=number>
-										</div>
-									</div>
-									<div class="toolbar-option toolbar-stepper"
-										data-option-type="border-radius">
-										<h4 class="toolbar-option-label">Radius</h4>
-										<div class="stepper">
-											<input class="lineRadius size-box" type=number>
-										</div>
-									</div>
-									<div class="toolbar-option toolbar-color"
-										data-option-type="border-color">
-										<h4 class="toolbar-option-label">Color</h4>
-										<div class="toolbar-color-trigger">
-											<input class="text-border-colorinput" type="color">
-											<div class="toolbar-color-reset icon i-undo"
-												data-tooltip="Use default color" data-tooltip-delay="500"></div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="toolbar-option toolbar-divider"
-							data-option-type="divider"></div>
-						<div class="toolbar-option toolbar-multi"
-							data-option-type="block-depth" data-number-of-items="2">
-							<h4 class="toolbar-option-label">Depth</h4>
-							<div class="toolbar-multi-inner">
-								<div class="toolbar-multi-item" data-value="back"
-									data-tooltip="Move to back">
-									<i class="fa fa-arrow-down fa-2x"></i>
-								</div>
-								<div class="toolbar-multi-item" data-value="front"
-									data-tooltip="Move to front">
-									<i class="fa fa-arrow-up fa-2x"></i>
-								</div>
-							</div>
-						</div>
-						<div class="toolbar-option toolbar-multi"
-							data-option-type="block-actions" data-number-of-items="3">
-							<h4 class="toolbar-option-label">Actions</h4>
-							<div class="toolbar-multi-inner">
-								<div class="toolbar-multi-item" data-value="html"
-									data-tooltip="Edit HTML">
-									<i class="fa fa-edit fa-2x"></i>
-								</div>
-								<div class="toolbar-multi-item" data-value="duplicate"
-									data-tooltip="Duplicate">
-									<i class="fa fa-clipboard fa-2x"></i>
-								</div>
-								<div class="toolbar-multi-item" data-value="delete"
-									data-tooltip="Delete">
-									<i class="fa fa-trash fa-2x"></i>
-								</div>
-							</div>
-						</div>
-					</div>
+                    <!-- text -->
+                    <div class="text-list">
+                        <div class="toolbar-option toolbar-radio"
+                            data-option-type="text-align" data-number-of-items="4">
+                            <h4 class="toolbar-option-label">Text Alignment</h4>
+                            <div class="toolbar-radio-inner">
+                                <div class="toolbar-radio-item" data-value="left">
+                                    <i class="fa fa-align-left"></i>
+                                </div>
+                                <div class="toolbar-radio-item" data-value="center">
+                                    <i class="fa fa-align-center"></i>
+                                </div>
+                                <div class="toolbar-radio-item" data-value="right">
+                                    <i class="fa fa-align-right"></i>
+                                </div>
+                                <div class="toolbar-radio-item" data-value="justify">
+                                    <i class="fa fa-align-justify"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="toolbar-option toolbar-stepper"
+                            data-option-type="text-size">
+                            <h4 class="toolbar-option-label">Text Scale</h4>
+                            <div class="stepper">
+                                <input class="text font size-box" type=number value=20>
+                            </div>
+                        </div>
+                        <div class="toolbar-option toolbar-divider"
+                            data-option-type="divider"></div>
+                        <div class="toolbar-option toolbar-color"
+                            data-option-type="text-color">
+                            <h4 class="toolbar-option-label">Text Color</h4>
+                            <div class="toolbar-color-trigger">
+                                <input class="text-colorinput" type="color">
+                                <div class="toolbar-color-reset icon i-undo"
+                                    data-tooltip="Use default color" data-tooltip-delay="500"></div>
+                            </div>
+                        </div>
+                        <div class="toolbar-option toolbar-color"
+                            data-option-type="background-color">
+                            <h4 class="toolbar-option-label">Background Color</h4>
+                            <div class="toolbar-color-trigger transparent">
+                                <input class="back-colorinput" type="color">
+                                <div class="toolbar-color-reset icon i-undo"
+                                    data-tooltip="Use default color" data-tooltip-delay="500"></div>
+                            </div>
+                        </div>
+                        <div class="toolbar-option toolbar-range"
+                            data-option-type="opacity">
+                            <h4 class="toolbar-option-label">Opacity</h4>
+                            <div class="range">
+                                <input class="text opacity size-box" type=number value=1> <input
+                                    class="text opacity size-scroll" type=range min="0" max="1"
+                                    step="0.1">
+                            </div>
+                        </div>
+                        <div id="padding" class="toolbar-option toolbar-stepper"
+                            data-option-type="padding">
+                            <h4 class="toolbar-option-label">Padding</h4>
+                            <div class="stepper">
+                                <input class="text padding size-box" type=number>
+                            </div>
+                        </div>
+                        <div class="toolbar-option toolbar-divider"
+                            data-option-type="divider"></div>
+                        <div class="toolbar-option toolbar-group"
+                            data-group-type="border-css">
+                            <div class="text-toolbar-group-trigger">
+                                <span class="label">Border</span> <input type="checkbox"
+                                    class="text border checkbox" name="border" value="border">
+                            </div>
+                            <div class="text-toolbar-group-options">
+                                <div class="text-toolbar-group-options-inner">
+                                    <div class="toolbar-option toolbar-select"
+                                        data-option-type="border-style">
+                                        <h4 class="toolbar-option-label">Style</h4>
+                                        <div class="text-toolbar-select-trigger">Solid</div>
+                                    </div>
+                                    <div class="toolbar-option toolbar-stepper"
+                                        data-option-type="border-width">
+                                        <h4 class="toolbar-option-label">Width</h4>
+                                        <div class="stepper">
+                                            <input class="text lineWidth size-box" type=number>
+                                        </div>
+                                    </div>
+                                    <div class="toolbar-option toolbar-stepper"
+                                        data-option-type="border-radius">
+                                        <h4 class="toolbar-option-label">Radius</h4>
+                                        <div class="stepper">
+                                            <input class="text lineRadius size-box" type=number>
+                                        </div>
+                                    </div>
+                                    <div class="toolbar-option toolbar-color"
+                                        data-option-type="border-color">
+                                        <h4 class="toolbar-option-label">Color</h4>
+                                        <div class="toolbar-color-trigger">
+                                            <input class="text-border-colorinput" type="color">
+                                            <div class="toolbar-color-reset icon i-undo"
+                                                data-tooltip="Use default color" data-tooltip-delay="500"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="toolbar-option toolbar-divider"
+                            data-option-type="divider"></div>
+                        <div class="toolbar-option toolbar-multi"
+                            data-option-type="block-depth" data-number-of-items="2">
+                            <h4 class="toolbar-option-label">Depth</h4>
+                            <div class="toolbar-multi-inner">
+                                <div class="toolbar-multi-item" data-value="back"
+                                    data-tooltip="Move to back">
+                                    <i class="fa fa-arrow-down fa-2x"></i>
+                                </div>
+                                <div class="toolbar-multi-item" data-value="front"
+                                    data-tooltip="Move to front">
+                                    <i class="fa fa-arrow-up fa-2x"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="toolbar-option toolbar-multi"
+                            data-option-type="block-actions" data-number-of-items="3">
+                            <h4 class="toolbar-option-label">Actions</h4>
+                            <div class="toolbar-multi-inner">
+                                <div class="toolbar-multi-item" data-value="html"
+                                    data-tooltip="Edit HTML">
+                                    <i class="fa fa-edit fa-2x"></i>
+                                </div>
+                                <div class="toolbar-multi-item" data-value="duplicate"
+                                    data-tooltip="Duplicate">
+                                    <i class="fa fa-clipboard fa-2x"></i>
+                                </div>
+                                <div class="toolbar-multi-item" data-value="delete"
+                                    data-tooltip="Delete">
+                                    <i class="fa fa-trash fa-2x"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
 
 
