--- a/web4test/src/main/webapp/pro/Edit.html
+++ b/web4test/src/main/webapp/pro/Edit.html
@@ -806,10 +806,10 @@
 										data-option-type="border-width">
 										<h4 class="toolbar-option-label">WIDTH</h4>
 										<div class="stepper">
-											<input type="iframe border-width size-box"
-												class="stepper-number">
+											<input type="text"
+												class="iframe border-width size-box">
 										</div>
-									</div>
+									</div> 
 									<div class="toolbar-option toolbar-color"
 										data-option-type="border-color">
 										<h4 class="toolbar-option-label">COLOR</h4>
