iframe text edit 완료?

--- a/web4test/src/main/webapp/pro/Edit.html
+++ b/web4test/src/main/webapp/pro/Edit.html
@@ -785,7 +785,7 @@
 							data-option-type="padding">
 							<h4 class="toolbar-option-label">Padding</h4>
 							<div class="stepper">
-								<input class="padding size-box" type=number>
+								<input class="iframe padding size-box" type=number value=1>
 							</div>
 						</div>
 
