--- a/web4test/src/main/webapp/reveal/index.html
+++ b/web4test/src/main/webapp/reveal/index.html
@@ -32,7 +32,9 @@
 		<!-- Custom -->
 		<link rel="stylesheet" href="css/contents.css">
     <script src="../pro/js/jquery-1.11.2.js"  type="text/javascript"></script>
+    <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
     <script src="js/load.js"></script>
+		
 
 		<!--[if lt IE 9]>
 		<script src="lib/js/html5shiv.js"></script>
@@ -46,13 +48,13 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 
+        <section></section>
 			</div>
 
 		</div>
 
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
-
 		<script>
 
 			// Full list of configuration options available at:
@@ -63,7 +65,7 @@
 				history: true,
 				center: true,
 
-				transition: 'slide', // none/fade/slide/convex/concave/zoom
+				transition: 'concave', // none/fade/slide/convex/concave/zoom
 
 				// Optional reveal.js plugins
 				dependencies: [
