--- a/web4test/src/main/webapp/pro/Edit.html
+++ b/web4test/src/main/webapp/pro/Edit.html
@@ -275,6 +275,8 @@
 					<div class="slides" style="width: 960px; height: 700px;">
 						<section class="overflowing present has-light-background"
 							x="0"
+							y="0"
+							maxY="1"
 							data-background-color="#ffffff"
 							data-id="0279c11631561889345ddf52a9453fd5"
 							style="display: block;" data-index-h="0" style="display: block;">
