--- a/web4test/src/main/webapp/protoMypage/mypage.html
+++ b/web4test/src/main/webapp/protoMypage/mypage.html
@@ -20,10 +20,9 @@
     <link rel="stylesheet" type="text/css" href="TooltipMenu/css/component.css" />
     <script src="TooltipMenu/js/modernizr.custom.js"></script>  
 	    <link rel="stylesheet" type="text/css" href="css/mypage-list.css" />
+
 	</head>
-	<style>
 	
-	</style>
 	<body>
 <div class="topMenu">
     <div class="containerHead">
@@ -94,7 +93,7 @@
                                          <div class='canvas-1 canvasIn preThumbnail'><img src='img/2014050814508068683_1.jpg'></div> <!-- 인블록라인으로 선언해서 왼쪽 썸네일 배치 및 이미지 담기 -->
                                          <div class='canvas-1 canvasIn canvasInfo'>
                                              <div class='canvas-1 canvasIn Title'>
-                                                    <div class='canvas-1 canvasIn TitleInner prename'>제목</div>
+                                                    <div class='canvas-1 canvasIn TitleInner prename'>자바67기 프레젠테이션</div>
                                              </div><!-- 상단 묶음 -->
                                              <div class='canvas-1 canvasIn Tool'>
                                                      <div class='canvas-1 canvasIn create_date'><span>Date : </span><span class='cre_date' >2015-07-10 Fri</span></div>
@@ -127,7 +126,7 @@
                                          <div class='canvas-1 canvasIn preThumbnail'><img src='img/2014050814508068683_1.jpg'></div> <!-- 인블록라인으로 선언해서 왼쪽 썸네일 배치 및 이미지 담기 -->
                                          <div class='canvas-1 canvasIn canvasInfo'>
                                              <div class='canvas-1 canvasIn Title'>
-                                                    <div class='canvas-1 canvasIn TitleInner prename'>제목</div>
+                                                    <div class='canvas-1 canvasIn TitleInner prename'>할 일이 없는건 아닌데 할게 없다</div>
                                              </div><!-- 상단 묶음 -->
                                              <div class='canvas-1 canvasIn Tool'>
                                                      <div class='canvas-1 canvasIn create_date'><span>Date : </span><span class='cre_date'>2015-07-11 SAT</span></div>
