edit.html edit.css
section color css 추가

--- a/web4test/src/main/webapp/pro/Edit.html
+++ b/web4test/src/main/webapp/pro/Edit.html
@@ -167,6 +167,7 @@
 				</button>
 				<button class="button style" data-tooltip="Style"
 					data-tooltip-alignment="r">
+					<input class="section-color" type="color">
 					<span class="icon i-brush"><i class="fa fa-paint-brush "></i></span><span
 						class="close icon i-x"></span>
 				</button>
