firstpage final 수정중

--- a/web4test/src/main/webapp/firstpage/js/firstpage.html
+++ b/web4test/src/main/webapp/firstpage/js/firstpage.html
@@ -4,28 +4,17 @@
 <title>Lateral On-Scroll Sliding with jQuery</title>
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description"
-	content="Lateral On-Scroll Sliding with jQuery - Timeline Example with CSS3,
-                                          Login and Registration Form with HTML5 and CSS3" />
-<meta name="keywords"
-	content="lateral, sides, slide, scroll, jquery, css3, timeline,
-                                       html5, css3, form, switch, animation, :target, pseudo-class" />
-<meta name="author" content="Codrops" />
+
 <link rel="shortcut icon" href="../favicon.ico">
 <link rel="stylesheet" type="text/css" href="css/demo.css" />
 <link rel="stylesheet" type="text/css" href="css/style.css" />
-<link href='http://fonts.googleapis.com/css?family=Kelly+Slab'
-	rel='stylesheet' type='text/css' />
+<link href='http://fonts.googleapis.com/css?family=Kelly+Slab' rel='stylesheet' type='text/css' />
 <link rel="shortcut icon" href="../favicon.ico">
 <link rel="stylesheet" type="text/css" href="css/login-demo.css" />
 <link rel="stylesheet" type="text/css" href="css/login.css" />
-<link rel="stylesheet" type="text/css"
-	href="css/login-animate-custom.css" />
+<link rel="stylesheet" type="text/css" href="css/login-animate-custom.css" />
 
-<!--[if lt IE 9]>
-				<link rel="stylesheet" type="text/css" href="css/styleIE.css" />
-		<![endif]-->
+
 <script type="text/javascript" src="js/modernizr.custom.11333.js"></script>
 <style>
 body {
