--- a/web4test/src/main/webapp/tryMypage/index.html
+++ b/web4test/src/main/webapp/tryMypage/index.html
@@ -79,7 +79,7 @@
 					</div>
 					<div class ="side side-center">
 					   <div class="intro-content">
-					       <div class="profile"><img src="img/2014050814508068683_1.jpg" alt="profile3"></div>
+					       <div class="profile"><img src="img/creat.jpg" alt="profile3"></div>
 					       <h1><span class='createMs'>new Canvas</span></h1>
 					   </div><!-- 센터 intro-content-->
 					</div><!--센터 side div 끝  -->
