--- a/web4test/src/main/webapp/tryMypage/mypage.html
+++ b/web4test/src/main/webapp/tryMypage/mypage.html
@@ -4,17 +4,14 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<title>Blueprint: Split Layout</title>
+		<title>Free-zentation ::: My page </title>
+		<!--아이콘-->
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 		
 		<!-- container splitout css -->
 		<link rel="shortcut icon" href="../favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
-		<!-- topMenu -->
-		<link rel="shortcut icon" href="../favicon.ico">
-        <link rel="stylesheet" type="text/css" href="TooltipMenu/css/default.css" />
-        <link rel="stylesheet" type="text/css" href="TooltipMenu/css/component.css" />
-        <link rel="stylesheet" type="text/css" href="css/mypage-list.css" />	
 		 
  		<!-- topMenu splitout js 이게 맨 위에 있어야 함-->
          <script src="TooltipMenu/js/modernizr.custom.js"></script>  
@@ -23,6 +20,12 @@
  		<!-- 마이페이지 컨트롤러 연결 js-->
  		<script src='js/jquery-1.11.2.js'></script>
  		<script src="js/mypageControll.js"></script>
+ 		
+		<!-- topMenu -->
+		<link rel="shortcut icon" href="../favicon.ico">
+        <link rel="stylesheet" type="text/css" href="TooltipMenu/css/default.css" />
+        <link rel="stylesheet" type="text/css" href="TooltipMenu/css/component.css" />
+        <link rel="stylesheet" type="text/css" href="css/mypage-list.css" />	
 	</head>
 	<body>
 <div class="topMenu">
@@ -53,8 +56,8 @@
                         <li><a href="#" class="cbp-tm-icon-mobile">Sea lettuce</a></li> -->
                     </ul>
                 </li>
-                <li>
-                    <a href="#">정준호님 환영합니다</a>
+                <li class='loginUserName'>
+                    <a class='userName' href="#"></a>
                     <ul class="cbp-tm-submenu">
                         <li><a href="#" class="cbp-tm-icon-cog">로그아웃</a></li>
                         <!-- <li><a href="#" class="cbp-tm-icon-mail">Raisin kakadu</a></li> -->
@@ -80,7 +83,7 @@
 					<div class ="side side-center">
 					   <div class="intro-content">
 					       <div class="profile"><img src="img/creat.jpg" alt="profile3"></div>
-					       <h1><span class='createMs'>new Canvas</span></h1>
+					       <h1><span class='createMs'><span class='one'>new C</span><span class='two'>anvas</span></span></h1>
 					   </div><!-- 센터 intro-content-->
 					</div><!--센터 side div 끝  -->
 					<div class="side side-right">
@@ -142,8 +145,8 @@
 		<script src="js/classie.js"></script>
 		<script src="js/cbpSplitLayout.js"></script>
 		<!--  TopMenu js -->
-     <script src="TooltipMenu/js/cbpTooltipMenu.min.js"></script>
-        <script>
+      <script src="TooltipMenu/js/cbpTooltipMenu.min.js"></script>
+         <script>
             var menu = new cbpTooltipMenu( document.getElementById( 'cbp-tm-menu' ) );
         </script> 
 		
