--- a/web4test/src/main/webapp/reveal/index.html
+++ b/web4test/src/main/webapp/reveal/index.html
@@ -48,8 +48,8 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 
-        <section class="default" data-background-color="#cf2121"></section>
-        <section class="default" data-background-color="#ffffff"></section>
+<!--         <section class="default" data-background-color="#cf2121"></section>
+        <section class="default" data-background-color="#ffffff"></section> -->
 			</div>
 
 		</div>
