--- a/web4test/src/main/webapp/tryMypage/mypage.html
+++ b/web4test/src/main/webapp/tryMypage/mypage.html
@@ -81,7 +81,7 @@
 						<div class="overlay"></div>
 					</div>
 					<div class ="side side-center">
-					   <div class="intro-content">
+					   <div class="intro-content newCanvas">
 					       <div class="profile"><img src="img/creat.jpg" alt="profile3"></div>
 					       <h1><span class='createMs'><span class='one'>new C</span><span class='two'>anvas</span></span></h1>
 					   </div><!-- 센터 intro-content-->
