--- a/web4test/src/main/webapp/tryMypage/mypage.html
+++ b/web4test/src/main/webapp/tryMypage/mypage.html
@@ -12,7 +12,9 @@
 		<link rel="shortcut icon" href="../favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
-		 
+       <!-- custom css 이혜인 -->
+        <link rel="stylesheet" type="text/css" href="css/mypage-list.css" />	
+ 		 
  		<!-- topMenu splitout js 이게 맨 위에 있어야 함-->
          <script src="TooltipMenu/js/modernizr.custom.js"></script>  
 		 <!-- container splitout js -->
@@ -25,7 +27,6 @@
 		<link rel="shortcut icon" href="../favicon.ico">
         <link rel="stylesheet" type="text/css" href="TooltipMenu/css/default.css" />
         <link rel="stylesheet" type="text/css" href="TooltipMenu/css/component.css" />
-        <link rel="stylesheet" type="text/css" href="css/mypage-list.css" />	
 	</head>
 	<body>
 <div class="topMenu">
