edit 기존 저장된거 로드할때 (.js 추가)

--- a/web4test/src/main/webapp/pro/Edit.html
+++ b/web4test/src/main/webapp/pro/Edit.html
@@ -33,6 +33,7 @@
 	src="js/jquery-fileupload/jquery.fileupload.js"></script>
 
 <!-- 기능별코드 -->
+<script src="js/editLoad.js"></script><!-- load Deck -->
 <script src="js/Edit.js"></script><!-- 우인규 코드 html 기본 코드 -->
 <script src="js/slide.js"></script><!-- 우인규 코드 slide 기본 코 -->
 <script src="js/text.js"></script><!--이혜인 text 코드  -->
