--- a/web4test/src/main/webapp/firstpage/firstpage.html
+++ b/web4test/src/main/webapp/firstpage/firstpage.html
@@ -51,7 +51,7 @@ body {
                     <a href="#">Home</a>
                 </li> -->
                 <li>
-                    <a href="#">Do Free-sentaiton</a>
+                    <a href="../tryMypage/mypage.html">Do Free-sentaiton</a>
                     <ul class="cbp-tm-submenu">
                         <li><a href="#" class="cbp-tm-icon-users">Play Presentation</a></li>
                         <li><a href="#" class="cbp-tm-icon-mobile">Connect Controller</a></li>
