--- a/web4test/src/main/webapp/firstpage/firstpage.html
+++ b/web4test/src/main/webapp/firstpage/firstpage.html
@@ -75,13 +75,7 @@ body {
                     </ul>
                 </li>
                 <li>
-                 <!-- <a href="#">로그인</a>
-                    <ul class="cbp-tm-submenu">
-                        <li>
-                        </li>
-                        <li><a href="#" class="cbp-tm-icon-mail">Raisin kakadu</a></li>
-                    </ul>  -->
-                <div class="ss-right loginBtn">
+                <ul class="ss-right loginBtn loginUserName">
                         <div class="naverBtn">
                              <a href="http://192.168.103.78:9999/web4test/naverLogin.do"
                                 onclick="window.open(this.href,'_blank','width=800,height=600, scrollbars=yes');return false;">
@@ -96,7 +90,7 @@ body {
                         <span class="icon" ></span>
                         <span class="buttonText"></span>
                         </div>
-                </div>
+                </ul>
              <!--    <div class='loginSuccess'>
                     <a href="#">정준호님 환영합니다</a>
                     <ul class="cbp-tm-submenu">
@@ -125,7 +119,7 @@ body {
 				style="-webkit-perspective: 600px; -webkit-perspective-origin: 50% 0%; height: 350px; border-top-width: 20px;">
 				<div class="ss-left">
 					<h2 class='mainTitle'>
-					<div class='main'>Free-sentation</div><span >produce, present in freedom</span></d>
+					<div class='main'>Free-sentation</div><span>produce, present in freedom</span>
 					</h2>
 				</div>
 			</div>
