--- a/web4test/src/main/webapp/pro/Edit.html
+++ b/web4test/src/main/webapp/pro/Edit.html
@@ -25,19 +25,16 @@
 <script src="js/jquery-noConflict.js" type="text/javascript"></script>
 <!-- 정준호:이미지 업로드js -->
 <script type="text/javascript" src="js/bootstrap.js"></script>
-<script type="text/javascript"
-	src="js/jquery-fileupload/vendor/jquery.ui.widget.js"></script>
-<script type="text/javascript"
-	src="js/jquery-fileupload/jquery.iframe-transport.js"></script>
-<script type="text/javascript"
-	src="js/jquery-fileupload/jquery.fileupload.js"></script>
+<script type="text/javascript" src="js/jquery-fileupload/vendor/jquery.ui.widget.js"></script>
+<script type="text/javascript" src="js/jquery-fileupload/jquery.iframe-transport.js"></script>
+<script type="text/javascript" src="js/jquery-fileupload/jquery.fileupload.js"></script>
 
 <!-- 기능별코드 -->
 <script src="js/editLoad.js"></script><!-- load Deck -->
 <script src="js/Edit.js"></script><!-- 우인규 코드 html 기본 코드 -->
 <script src="js/slide.js"></script><!-- 우인규 코드 slide 기본 코 -->
 <script src="js/text.js"></script><!--이혜인 text 코드  -->
-<!-- <script src="js/basic.js"></script>고유식 코드 shape, 기본 코드 -->
+<!-- <script src="js/basic.js"></script> --><!-- 고유식 코드 shape, 기본 코드 -->
 <script src="js/shape.js"></script><!-- 고유식 코드 shape, 기본 코드-->
 <script src="js/shape-edit.js"></script><!-- shape 편집 코드 이혜인 -->
 <script src="js/image-edit.js"></script><!-- shape 편집 코드 이혜인 -->
@@ -224,26 +221,26 @@
 			<div class="nav-item">
 				<button class="button profile" data-tooltip="profile"
 					data-tooltip-alignment="r">
-					<span class="icon profile">Profile<i
-						class="fa fa-cloud-download"></i></span>
+					<span class="icon profile">Mypage <i
+						class="fa fa-user"></i></span>
 				</button>
 				<button class="button new deck" data-tooltip="new deck"
 					data-tooltip-alignment="r">
-					<span class="icon i-new-deck">New deck<i
+					<span class="icon i-new-deck">New deck <i
 						class="fa fa-picture-o"></i></span>
 				</button>
 				<button class="button setting" data-tooltip="setting"
 					data-tooltip-alignment="r">
-					<span class="icon i-share">Settings<i
+					<span class="icon i-share">Settings <i
 						class="fa fa-share-alt"></i></span>
 				</button>
 				<button class="button upgrade" data-tooltip="upgrade"
 					data-tooltip-alignment="r">
-					<span class="icon i-upgrade">Upgrade<i
+					<span class="icon i-upgrade">Upgrade <i
 						class="fa fa-question-circle"></i></span>
 				</button>
 				<button class="button more-options">
-					<span class="icon i-sign-out">Sign out<i
+					<span class="icon i-sign-out">Sign out <i
 						class="fa fa-spinner fa-spin"></i></span>
 				</button>
 			</div>
